plugins {
	id 'java'
	id 'java-library'
	id "com.diffplug.spotless" version "5.1.0"
	id 'org.javamodularity.moduleplugin' version '1.7.0' apply false
}

group 'space.smarquardt.aws.manager'
version '1.0-SNAPSHOT'

repositories {
	mavenCentral()
}

sourceCompatibility = 14
targetCompatibility = 14






subprojects {
	apply plugin: 'java'
	apply plugin: "org.javamodularity.moduleplugin"
	apply plugin: 'com.diffplug.spotless'
	spotless {
		java {
			googleJavaFormat()

			encoding 'UTF-8'
			importOrder 'java', 'javax', 'org', 'com', 'de.otto', '' // Importorder
			removeUnusedImports() // removes any unused imports
		}
		freshmark {
			target '*.md' // you have to set the target manually
			//propertiesFile('gradle.properties')		loads all the properties in the given file

		}
		groovyGradle {
			target '*.gradle' // default target of groovyGradle
			greclipse()
		}
	}

	tasks.withType(JavaCompile) {
		options.compilerArgs += '--enable-preview'
	}
	tasks.withType(Test) {
		jvmArgs += "--enable-preview"
	}

	version "1.0-SNAPSHOT"

	sourceCompatibility = 15
	targetCompatibility = 15

	repositories {
		mavenCentral()
	}

	test {
		useJUnitPlatform()

		testLogging {
			events 'PASSED', 'FAILED', 'SKIPPED'
		}
	}

	dependencies {
		implementation('software.amazon.awssdk:apache-client')
		implementation(platform("software.amazon.awssdk:bom:$awssdkVersion"))
		testImplementation "org.junit.jupiter:junit-jupiter-api:$junitversion"
		testImplementation "org.junit.jupiter:junit-jupiter-params:$junitversion"
		testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitversion"
		implementation 'io.vavr:vavr:1.0.0-alpha-3'
	}
}
